# src/models/account.rs
@@ -11,7 +11,7 @@ pub struct Account {
     pub id: AccountId,
     pub user_id: UserId,
     pub currency: Currency,
-    pub address: AccountAddress,
+    pub address: BlockchainAddress,
     pub name: Option<String>,
     pub kind: AccountKind,
     pub created_at: NaiveDateTime,
@@ -24,7 +24,7 @@ impl Default for Account {
             id: AccountId::generate(),
             user_id: UserId::generate(),
             currency: Currency::Eth,
-            address: AccountAddress::default(),
+            address: BlockchainAddress::default(),
             name: None,
             kind: AccountKind::Cr,
             created_at: ::chrono::Utc::now().naive_utc(),
@@ -54,7 +54,7 @@ pub struct NewAccount {
     pub user_id: UserId,
     pub currency: Currency,
     #[validate]
-    pub address: AccountAddress,
+    pub address: BlockchainAddress,
     #[validate(length(min = "1", max = "40", message = "Name must not be empty "))]
     pub name: Option<String>,
     pub kind: AccountKind,
@@ -67,7 +67,7 @@ impl Default for NewAccount {
             name: None,
             user_id: UserId::generate(),
             currency: Currency::Eth,
-            address: AccountAddress::default(),
+            address: BlockchainAddress::default(),
             kind: AccountKind::Cr,
         }
     }
@@ -126,8 +126,8 @@ impl Default for CreateAccount {
     }
 }
 
-impl From<(CreateAccount, AccountAddress)> for NewAccount {
-    fn from(create: (CreateAccount, AccountAddress)) -> Self {
+impl From<(CreateAccount, BlockchainAddress)> for NewAccount {
+    fn from(create: (CreateAccount, BlockchainAddress)) -> Self {
         Self {
             id: create.0.id,
             name: Some(create.0.name),
